--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/dayjs": "^1.3.13",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/x-date-pickers": "^6.0.4",
@@ -15,9 +16,10 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.28",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.3.4"
   }
 }
